[package]
name = "ebmus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
template = ["dep:chrono", "dep:rand"]

[dependencies]
blake3 = "1.3.3"
chrono = { version = "0.4", features = ["clock"], optional = true }
rand = { version = "0.8", optional = true }
